...
                            <constraint firstAttribute="trailing" secondItem="Fcd-kT-STS" secondAttribute="trailing" id="2s6-Xz-agq"/>
                            <constraint firstItem="Fcd-kT-STS" firstAttribute="top" secondItem="Htj-gU-Yot" secondAttribute="top" id="XtU-w7-AU7"/>
                            <constraint firstItem="Fcd-kT-STS" firstAttribute="leading" secondItem="Htj-gU-Yot" secondAttribute="leading" id="jsd-D0-f2l"/>
                            <constraint firstAttribute="bottom" secondItem="Fcd-kT-STS" secondAttribute="bottom" id="xrk-e5-m8g"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Notes" id="wps-J3-ue2">
                        <barButtonItem key="leftBarButtonItem" image="SideMenu" id="biZ-kp-CrV">
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="NoteTable" destination="Fcd-kT-STS" id="fBl-Y5-ptX"/>
...
                                <connections>
                                    <segue destination="IHk-gc-aQM" kind="presentation" id="rkq-0u-8Ru"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rIE-5s-tlb">
                                <rect key="frame" x="287" y="640" width="100" height="40"/>
                                <state key="normal" title="GO!" backgroundImage="ButtonSmall"/>
                                <connections>
                                    <action selector="login:" destination="6uv-H2-iQt" eventType="touchUpInside" id="XDJ-zH-wSl"/>
                                    <segue destination="wkP-SP-Ww8" kind="showDetail" identifier="login" id="eA8-i5-5Nz"/>
                                </connections>
                            </button>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="WiZ-Jg-vcl">
...
                            <constraint firstAttribute="trailing" secondItem="GZj-bC-MrI" secondAttribute="trailing" id="pgx-KU-DCJ"/>
                            <constraint firstItem="p7C-d8-aev" firstAttribute="centerX" secondItem="wUs-BY-AqB" secondAttribute="centerX" id="rhj-lD-XNI"/>
                            <constraint firstItem="QX7-hG-klI" firstAttribute="top" secondItem="5mE-Ps-MBt" secondAttribute="bottom" constant="8" symbolic="YES" id="uCV-L4-gee"/>
                        </constraints>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Calendar" id="SJ3-fY-mbf">
                        <barButtonItem key="leftBarButtonItem" image="SideMenu" id="zGz-aw-06v">
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" image="Add" id="yI9-DU-dwL">
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
...
                            <constraint firstItem="KBQ-ug-TRy" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leadingMargin" constant="-10" id="qdB-qF-yxa"/>
                            <constraint firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="qqM-NS-xev"/>
                            <constraint firstAttribute="centerY" secondItem="zEq-FU-wV5" secondAttribute="centerY" id="qzY-Ky-pLD"/>
                            <constraint firstItem="KBQ-ug-TRy" firstAttribute="top" secondItem="L7p-HK-0SC" secondAttribute="bottom" constant="8" symbolic="YES" id="y7z-eh-2As"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Timetable" id="xkQ-au-rCm">
                        <barButtonItem key="leftBarButtonItem" image="SideMenu" id="eu3-ZE-n8O">
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" image="Add" id="7vI-rg-1p4">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
...
